--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">About</a></li>
-                <li><a href=""><button>Hire Me</button></a></li>
+                <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
     </header>
