--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
                 <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-subtitle">Hi, I  am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-desc">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary secondary-btn">Contact</button>
+            </div>
+
+            <div class="banner-img">
+                <img src="images/hardy.png">
+            </div>
+            
+
+        </div>
+            
     </header>
 
     <main>
